[gd_scene load_steps=20 format=3 uid="uid://bnhytv3l22cqf"]

[ext_resource type="Script" path="res://Characters/Human Character/human character.gd" id="1_vbv80"]
[ext_resource type="Texture2D" uid="uid://b81h772njwvs" path="res://icon.svg" id="2_0n20t"]
[ext_resource type="Texture2D" uid="uid://df28qr6yof5oy" path="res://Characters/Human Character/Char_Idle.PNG" id="2_ixko3"]
[ext_resource type="Texture2D" uid="uid://c2q5jsbbls6m2" path="res://Characters/Human Character/Char_Running.PNG" id="4_7fbde"]
[ext_resource type="Script" path="res://Characters/Human Character/CameraBirdHuman.gd" id="4_qc14b"]

[sub_resource type="AtlasTexture" id="AtlasTexture_53abq"]
atlas = ExtResource("2_ixko3")
region = Rect2(0, 0, 34, 34)

[sub_resource type="AtlasTexture" id="AtlasTexture_r103t"]
atlas = ExtResource("2_ixko3")
region = Rect2(34, 0, 34, 34)

[sub_resource type="SpriteFrames" id="SpriteFrames_0i8kp"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_53abq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r103t")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_8phdw"]
size = Vector2(24, 32)

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_2wfok"]
radius = 52.0
height = 152.0

[sub_resource type="Animation" id="Animation_novnw"]
resource_name = "throw_wobble"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1, 2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [0.174533, -1.0821, 0.174533]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_cntc7"]
_data = {
"throw_wobble": SubResource("Animation_novnw")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_rrut5"]
size = Vector2(26, 19)

[sub_resource type="AtlasTexture" id="AtlasTexture_or8oa"]
atlas = ExtResource("4_7fbde")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_d2f2o"]
atlas = ExtResource("4_7fbde")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_5awib"]
atlas = ExtResource("4_7fbde")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_7qlka"]
atlas = ExtResource("4_7fbde")
region = Rect2(96, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_rullm"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_or8oa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d2f2o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5awib")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7qlka")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_v1ss8"]
radius = 12.0
height = 36.0

[node name="human character" type="CharacterBody2D"]
collision_layer = 32
script = ExtResource("1_vbv80")

[node name="Idle" type="AnimatedSprite2D" parent="."]
position = Vector2(2.08165e-12, 2.08165e-12)
sprite_frames = SubResource("SpriteFrames_0i8kp")

[node name="CollisionShape" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_8phdw")
debug_color = Color(0.921238, 0.162698, 0.567678, 0.42)

[node name="interact box" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="interact box"]
shape = SubResource("CapsuleShape2D_2wfok")

[node name="throwing_arm" type="Node2D" parent="."]
rotation = 0.174533

[node name="throwing test sprite" type="Sprite2D" parent="throwing_arm"]
position = Vector2(93, -2)
scale = Vector2(0.109375, 0.109375)
texture = ExtResource("2_0n20t")

[node name="AnimationPlayer" type="AnimationPlayer" parent="throwing_arm"]
libraries = {
"": SubResource("AnimationLibrary_cntc7")
}

[node name="Camera2D" type="Camera2D" parent="."]
script = ExtResource("4_qc14b")

[node name="rock_throw_cooldown" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="human_close_to_bird" type="Area2D" parent="."]
collision_layer = 32
collision_mask = 64

[node name="CollisionShape2D" type="CollisionShape2D" parent="human_close_to_bird"]
position = Vector2(0, -6.5)
shape = SubResource("RectangleShape2D_rrut5")

[node name="Running" type="AnimatedSprite2D" parent="."]
position = Vector2(-2, 0)
sprite_frames = SubResource("SpriteFrames_rullm")

[node name="ladder detector" type="Area2D" parent="."]
collision_layer = 32
collision_mask = 128

[node name="CollisionShape2D" type="CollisionShape2D" parent="ladder detector"]
shape = SubResource("CapsuleShape2D_v1ss8")

[connection signal="timeout" from="rock_throw_cooldown" to="." method="_on_rock_throw_cooldown_timeout"]
[connection signal="area_entered" from="ladder detector" to="." method="_on_ladder_detector_area_entered"]
